# yhoda-pipeline

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  alembic.ini  index.html  mkdocs.yml  prefect.yaml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml
architecture/data-sources/: index.html
architecture/database/: index.html
architecture/overview/: index.html
architecture/pipeline/: index.html
data/: README.md
deploy/: README.md  prefect-server.service  prefect-worker.service  setup.sh
docs/: entity-relationship-diagram.md  index.md  onboarding.md  pipeline-email-alerts.md  project-board-README.md  project-board.csv  project-plan.csv  project-plan.md  tutorial-pgadmin.md
docs/architecture/: data-sources.md  database.md  overview.md  pipeline.md
docs/assets/: extra.css
docs/how-to/: add-a-dataset.md  email-alerts.md  load-static-data.md  query-the-database.md  re-run-a-flow.md  update-power-bi.md
docs/reference/: entity-relationship-diagram.md  environment-variables.md  glossary.md
docs/runbooks/: api-key-expired.md  data-looks-wrong.md  flow-is-failing.md  index.md  pipeline-not-running.md
how-to/add-a-dataset/: index.html
how-to/email-alerts/: index.html
how-to/load-static-data/: index.html
how-to/query-the-database/: index.html
how-to/re-run-a-flow/: index.html
how-to/update-power-bi/: index.html
onboarding/: index.html
overrides/partials/: head.html
reference/entity-relationship-diagram/: index.html
reference/environment-variables/: index.html
reference/glossary/: index.html
runbooks/: index.html
runbooks/api-key-expired/: index.html
runbooks/data-looks-wrong/: index.html
runbooks/flow-is-failing/: index.html
runbooks/pipeline-not-running/: index.html
search/: search_index.json
src/yhovi_pipeline/: __init__.py  config.py
tests/: conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_compute_correlations.py  test_config.py  test_database_load.py  test_dwp.py  test_extract_fingertips.py  test_flows_active.py  test_flows_stubs.py  test_geo_lookups.py  test_geo_transform.py  test_load_csv.py  test_logging_utils.py  test_models.py  (+6 more)
(+45 files in other folders)
